--- a/Source/DroolTool.Web/package.json
+++ b/Source/DroolTool.Web/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-browser": "^8.2.10",
     "@angular/platform-browser-dynamic": "^8.2.10",
     "@angular/router": "^8.2.10",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ckeditor/ckeditor5-build-classic": "^18.0.0",
+    "@ckeditor/ckeditor5-upload": "^18.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@nguniversal/express-engine": "^8.1.1",
     "@ngx-progressbar/core": "^5.3.2",
@@ -40,6 +43,7 @@
     "google-palette": "^1.1.0",
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
+    "leaflet-gesture-handling": "^1.1.8",
     "leaflet.fullscreen": "^1.6.0",
     "leaflet.snogylop": "^0.4.0",
     "mydatepicker": "^2.6.6",
