Finsh the rename of DroolTool -> Zybach and run a gen-all on a restored database backup

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Source/DroolTool.GeoServer/docker_compose.localhost.yml
 /Source/DroolTool.GeoServer/data_dir/logs
 /Source/DroolTool.GeoServer/data_dir/layouts
 Source/Zybach.API/api-dev.zybach.org.pfx
+Source/Zybach.Web/src/assets/config.json
