--- a/Source/Zybach.Web/.dockerignore
+++ b/Source/Zybach.Web/.dockerignore
@@ -18,13 +18,13 @@
 .vs
 .vs/
 .vs/*
-.vs/DroolTool.Web/v15/Server/sqlite3/db.lock
+.vs/Zybach.Web/v15/Server/sqlite3/db.lock
 .vscode
 Dockerfile
-DroolTool.Web/.vs
-DroolTool.Web/.vs/
-DroolTool.Web/.vs/*
-DroolTool.Web/node_modules
+Zybach.Web/.vs
+Zybach.Web/.vs/
+Zybach.Web/.vs/*
+Zybach.Web/node_modules
 bin
 docker-compose.*.yml
 docker-compose.yml
