--- a/Source/Zybach.Web/.vscode/tasks.json
+++ b/Source/Zybach.Web/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/DroolTool.Web.csproj"
+                "${workspaceFolder}/Zybach.Web.csproj"
             ],
             "problemMatcher": "$msCompile"
         },
