--- a/Source/Zybach.Web/Properties/launchSettings.json
+++ b/Source/Zybach.Web/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DroolTool.Web": {
+    "Zybach.Web": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
