--- a/Source/Zybach.Web/angular.json
+++ b/Source/Zybach.Web/angular.json
@@ -4,11 +4,11 @@
   "newProjectRoot": "projects",
   
   "projects": {
-    "DroolTool.Web": {
+    "Zybach.Web": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "drooltool",
+      "prefix": "zybach",
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
@@ -95,18 +95,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "DroolTool.Web:build"
+            "browserTarget": "Zybach.Web:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "DroolTool.Web:build:production"
+              "browserTarget": "Zybach.Web:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "DroolTool.Web:build"
+            "browserTarget": "Zybach.Web:build"
           }
         },
         "test": {
@@ -141,7 +141,7 @@
         }
       }
     },
-    "DroolTool.Web-e2e": {
+    "Zybach.Web-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -150,11 +150,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "DroolTool.Web:serve"
+            "devServerTarget": "Zybach.Web:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "DroolTool.Web:serve:production"
+              "devServerTarget": "Zybach.Web:serve:production"
             }
           }
         },
@@ -170,5 +170,5 @@
       }
     }
   },
-  "defaultProject": "DroolTool.Web"
+  "defaultProject": "Zybach.Web"
 }
