--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Source/DroolTool.GeoServer/docker_compose.localhost.yml
 /Source/DroolTool.GeoServer/data_dir/layouts
 Source/Zybach.API/api-dev.zybach.org.pfx
 Source/Zybach.Web/src/assets/config.json
+Source/Zybach.API/secret.json
