--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -44,7 +44,7 @@
     "esri-leaflet": "^2.4.0",
     "font-awesome": "^4.7.0",
     "google-palette": "^1.1.0",
-    "jquery": "^3.5.0",
+    "jquery": "3.4.1",
     "leaflet": "^1.6.0",
     "leaflet-gesture-handling": "^1.1.8",
     "leaflet.fullscreen": "^1.6.0",
