* Add wells to map explorer from geooptix * Add well detail page with stubs * Add directional binding with the grid of wells * Add a single-well query to the arc layer

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Source/DroolTool.GeoServer/docker_compose.localhost.yml
 Source/Zybach.API/api-dev.zybach.org.pfx
 Source/Zybach.Web/src/assets/config.json
 Source/Zybach.API/secret.json
+Source/Zybach.Web/wwwroot/
