--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -41,6 +41,7 @@
     "bootstrap": "^4.4.1",
     "color-scheme": "^1.0.1",
     "core-js": "^3.6.5",
+    "echarts": "^4.7.0",
     "esri-leaflet": "^2.4.0",
     "font-awesome": "^4.7.0",
     "google-palette": "^1.1.0",
@@ -52,6 +53,7 @@
     "mydatepicker": "^9.0.1",
     "ngprogress": "^1.1.3",
     "ngx-cookie-service": "^3.0.4",
+    "ngx-echarts": "^4.2.2",
     "ngx-select-dropdown": "^1.4.2",
     "ngx-slick-carousel": "^0.5.0",
     "popper.js": "^1.16.1",
@@ -67,6 +69,7 @@
     "@angular/compiler-cli": "^9.1.3",
     "@angular/language-service": "^9.1.3",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/echarts": "^4.6.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.13.4",
