--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -50,6 +50,7 @@
     "leaflet-gesture-handling": "^1.1.8",
     "leaflet.fullscreen": "^1.6.0",
     "leaflet.snogylop": "^0.4.0",
+    "moment": "^2.26.0",
     "mydatepicker": "^9.0.1",
     "ngprogress": "^1.1.3",
     "ngx-cookie-service": "^3.0.4",
