--- a/Source/docker-compose/.env.template
+++ b/Source/docker-compose/.env.template
@@ -8,3 +8,8 @@ SMTP_PORT=25
 SITKA_EMAIL_REDIRECT={set_to_blank_for_prod}
 DROOLTOOL_WEB_URL={url for zybach-web}
 KEYSTONE_REDIRECT_URL={url for invited user to redirect to after keystone verification}
+GEOOPTIX_USERNAME={geooptix master  user}
+GEOOPTIX_PASSWORD={geooptix master user password}
+GEOOPTIX_CLIENT_ID={clientID for granttype password client for geooptix}
+GEOOPTIX_CLIENT_SECRET={client secret for above}
+GEOOPTIX_HOST_NAME={hostname for geooptix instance}
