Moving secret logic and using a module to extract secrets

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ Source/Zybach.API/api-dev.zybach.org.pfx
 Source/Zybach.Web/src/assets/config.json
 Source/Zybach.API/secret.json
 Source/Zybach.Web/wwwroot/
+Source/Zybach.NodeAPI/secrets.json
