--- a/Source/Zybach.NodeAPI/docker-compose.yml
+++ b/Source/Zybach.NodeAPI/docker-compose.yml
@@ -4,5 +4,10 @@ services:
   zybachapi:
     image: sitkacontainers.azurecr.io/zybach/nodeapi
     build: .
+    secrets:
+      - APP_SECRETS
     ports:
       - 3000:3000
+secrets:
+  APP_SECRETS: 
+    file: secrets.json
