Giving better name to overarching secret

--- a/Source/Zybach.NodeAPI/docker-compose.debug.yml
+++ b/Source/Zybach.NodeAPI/docker-compose.debug.yml
@@ -5,11 +5,11 @@ services:
     image: zybachapi
     build: .
     secrets:
-      - APP_SECRETS
+      - NODE_API_SECRETS
     ports:
       - 3000:3000
       - 9229:9229
     command: node --inspect=0.0.0.0:9229 ./bucket/www
 secrets:
-  APP_SECRETS: 
+  NODE_API_SECRETS: 
     file: secrets.json
