--- a/Source/Zybach.NodeAPI/package.json
+++ b/Source/Zybach.NodeAPI/package.json
@@ -15,6 +15,8 @@
     "http-errors": "~1.6.3",
     "moment": "^2.29.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "swagger-jsdoc": "^4.2.0",
+    "swagger-ui-express": "^4.1.4"
   }
 }
