Brings in  application insights,  attempts to sort time series results because evidently  they  aren't sorted  by time by default in flux query but currently has a sort going as a backup later on, slight restructuring of authentication

--- a/Source/Zybach.NodeAPI/package.json
+++ b/Source/Zybach.NodeAPI/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@cloudreach/docker-secrets": "^1.0.3",
     "@influxdata/influxdb-client": "^1.6.0",
+    "applicationinsights": "^1.8.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
