* Include Pump Rate cache * Set up secrecy

--- a/Source/Zybach.Teaspoon/docker-compose.debug.yml
+++ b/Source/Zybach.Teaspoon/docker-compose.debug.yml
@@ -4,8 +4,13 @@ services:
   zybach-teaspoon:
     image: zybach-teaspoon
     build: .
+    secrets:
+        - TEASPOON_INFLUX_SECRETS
     environment:
       NODE_ENV: development
     ports:
       - 9229:9229
     command: node --inspect=0.0.0.0:9229 teaspoon.js
+secrets:
+  TEASPOON_INFLUX_SECRETS:
+    file: secrets.json
