--- a/Source/Zybach.Teaspoon/package.json
+++ b/Source/Zybach.Teaspoon/package.json
@@ -2,6 +2,7 @@
   "name": "zybach-teaspoon",
   "version": "0.0.1",
   "dependencies": {
+    "@cloudreach/docker-secrets": "^1.0.3",
     "@influxdata/influxdb-client": "^1.6.0",
     "debug": "^4.2.0",
     "fs": "0.0.1-security",
