--- a/Source/Zybach.Teaspoon/docker-compose.yml
+++ b/Source/Zybach.Teaspoon/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.4'
 
 services:
   zybach-teaspoon:
-    image: zybach-teaspoon
+    image: sitkacontainers.azurecr.io/zybachteaspoon
     build: .
     environment:
       NODE_ENV: production
-    ports:
-      - 3000:3000
