* Add exec permissions to teaspoon-cron * Unignore influxConfig and remove influxConfig template

--- a/Source/Zybach.Teaspoon/Dockerfile
+++ b/Source/Zybach.Teaspoon/Dockerfile
@@ -11,4 +11,6 @@ RUN echo "*/15       *       *       *       *       /usr/src/app/teaspoon-cron"
 RUN apk add dos2unix
 RUN dos2unix ./teaspoon-cron
 
+RUN chmod a+rx ./teaspoon-cron
+
 CMD ["crond","-f", "-l", "8"]
