Move destination bucket to configured value

--- a/Source/Zybach.Teaspoon/docker-compose.debug.yml
+++ b/Source/Zybach.Teaspoon/docker-compose.debug.yml
@@ -8,6 +8,7 @@ services:
         - TEASPOON_SECRETS
     environment:
       NODE_ENV: development
+      DESTINATION_BUCKET: tpnrd-qa
     ports:
       - 9229:9229
     command: node --inspect=0.0.0.0:9229 teaspoon.js -c
