Configurate Node API source bucket name

--- a/Source/Zybach.NodeAPI/docker-compose.debug.yml
+++ b/Source/Zybach.NodeAPI/docker-compose.debug.yml
@@ -4,6 +4,8 @@ services:
   zybachapi:
     image: zybachapi
     build: .
+    environment: 
+      - SOURCE_BUCKET=tpnrd-qa
     secrets:
       - NODE_API_SECRETS
     ports:
