Use "mean" instead of "last" in the continuity meter normalization query since flux has an "undocumented feature" where last and create empty don't work together.

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ Source/Zybach.Web/wwwroot/
 Source/Zybach.NodeAPI/secrets.json
 Source/Zybach.Teaspoon/rows
 Source/Zybach.Teaspoon/test.js
+Source/Zybach.Teaspoon/secrets.prod.json
