Remove some debug-specific logging, and try to understand why the thing says it's running but no new data is making it to QA or PROD

--- a/Source/Zybach.Teaspoon/package.json
+++ b/Source/Zybach.Teaspoon/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "node --inspect=0.0.0.0 teaspoon.js",
     "runTsp": "node teaspoon.js >> /var/log/teaspoon",
-    "runTspComplete": "node teaspoon.js -c",
+    "runTspComplete": "node teaspoon.js -c >> /var/log/teaspoon-complete",
     "scrapeWellIDs": "node nednrScrape.js -f ./scrappy"
   },
   "devDependencies": {
