Use yarn instead of npm because better

--- a/Source/Zybach.NodeAPI/Dockerfile
+++ b/Source/Zybach.NodeAPI/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:12.18-alpine
+FROM node:current-alpine3.10
 WORKDIR /
-COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
-RUN npm install --production --silent && mv node_modules ../
+COPY ["package.json", "yarn.lock*", "npm-shrinkwrap.json*", "./"]
+RUN yarn install --production --silent && mv node_modules ../
 COPY . .
 EXPOSE 80
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
