JavaScript to TypeScript refactor * Add readme * Add secrets.template.json * Update launch.json, package.json to use ts-node during development and .tsconfig to generate sourcemaps to allow debugging .ts files * Rename .js to .ts throughout * Replace require() with import * Add @types packages to dev dependencies where applicable * Add types to declarations throughout existing code so TypeScript build runs * Remove lookup tables, views, and scripted tables from database definition that are not actually used

--- a/Source/Zybach.NodeAPI/Dockerfile
+++ b/Source/Zybach.NodeAPI/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:current-alpine3.10
 WORKDIR /
 COPY ["package.json", "yarn.lock*", "npm-shrinkwrap.json*", "./"]
-RUN yarn install --production --silent && mv node_modules ../
+# will need to use multi-stage builds so that we can install dev deps for compiling and only prod deps for running...
+RUN yarn install --silent && mv node_modules ../
+RUN yarn add ts-node
 COPY . .
+RUN yarn run tsc -p ./src
 EXPOSE 80
 CMD ["yarn", "start"]
