--- a/Source/Zybach.NodeAPI/.vscode/launch.json
+++ b/Source/Zybach.NodeAPI/.vscode/launch.json
@@ -4,16 +4,12 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Node: Nodemon",
-            "processId": "${command:PickProcess}",
-            "restart": true,
-            "protocol": "inspector"
-        },
-        {
-            "type": "node",
-            "request": "attach",
-            "name": "Docker: Attach to Node",
-            "remoteRoot": "/"
+            "name": "Docker: Attach to TSNode",
+            "port": 9229,
+            "address": "localhost",
+            "sourceMapPathOverrides": {
+                "/*": "${workspaceRoot}/*"
+            }
         }
     ]
 }
