--- a/Source/Zybach.NodeAPI/package.json
+++ b/Source/Zybach.NodeAPI/package.json
@@ -21,6 +21,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "moment": "^2.29.0",
+    "mongoose": "^5.11.10",
     "morgan": "~1.9.1",
     "mssql": "^6.2.3",
     "nodemon": "^2.0.6",
@@ -35,6 +36,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
     "@types/http-errors": "^1.8.0",
+    "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/mssql": "^6.0.7",
     "@types/node": "^14.14.14",
