--- a/Source/Zybach.NodeAPI/docker-compose.debug.yml
+++ b/Source/Zybach.NodeAPI/docker-compose.debug.yml
@@ -7,6 +7,7 @@ services:
     environment: 
       - SOURCE_BUCKET=tpnrd
       - TS_NODE_PROJECT=/src/tsconfig.json
+      - ENVIRONMENT=DEBUG
     secrets:
       - NODE_API_SECRETS
     ports:
