--- a/Source/Zybach.NodeAPI/package.json
+++ b/Source/Zybach.NodeAPI/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./dist/bucket/www.js",
     "build": "tsoa routes && tsc -p src",
-    "autogen-routes": "nodemon -w src/app_api/controllers -x tsoa routes",
+    "autogen-routes": "nodemon -w ./src/app_api/controllers -x tsoa routes",
     "debug": "nodemon"
   },
   "dependencies": {
@@ -20,14 +20,17 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-jwt": "^6.0.0",
     "http-errors": "~1.6.3",
+    "jwks-rsa": "^1.12.2",
     "moment": "^2.29.0",
     "mongoose": "^5.11.10",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
     "querystring": "^0.2.0",
     "swagger-ui-express": "^4.1.4",
-    "tsoa": "^3.4.0"
+    "tsoa": "^3.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/api-error-handler": "^1.0.32",
@@ -36,6 +39,8 @@
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
+    "@types/express-jwt": "^6.0.0",
+    "@types/express-session": "^1.17.3",
     "@types/http-errors": "^1.8.0",
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
