--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ Source/Zybach.Teaspoon/secrets.prod.json
 Source/Zybach.NodeAPI/src/bucket/cert.pem
 Source/Zybach.NodeAPI/src/bucket/key.pem
 Source/old/Zybach.Web/wwwroot/assets/config.json
+*.pem
