--- a/Source/Zybach.API/docker-compose.debug.yml
+++ b/Source/Zybach.API/docker-compose.debug.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - 3000:3000
       - 9229:9229
-    command: yarn debug
+    command: yarn start
     volumes:
       - ./src:/src
   mongo:
