More elegant do-nothing-forever command

--- a/Source/Zybach.API/docker-compose.debug.yml
+++ b/Source/Zybach.API/docker-compose.debug.yml
@@ -13,7 +13,8 @@ services:
     ports:
       - 3000:3000
       - 9229:9229
-    command: yarn start
+    #command: yarn start
+    command: "tail -f /dev/null"
     volumes:
       - ./src:/src
   mongo:
