Reinstante yarn start in dockerfile remove unneeded log statements

--- a/Source/Zybach.API/Dockerfile
+++ b/Source/Zybach.API/Dockerfile
@@ -7,5 +7,4 @@ RUN yarn add ts-node
 COPY . .
 RUN yarn run build
 EXPOSE 80
-#CMD ["yarn", "start"]
-CMD ["tail", "-f", "/dev/null"]
+CMD ["yarn", "start"]
