Hide invite user button and add test-api.componenet

--- a/Source/Zybach.API/docker-compose.debug.yml
+++ b/Source/Zybach.API/docker-compose.debug.yml
@@ -13,8 +13,7 @@ services:
     ports:
       - 3000:3000
       - 9229:9229
-    command: yarn start
-    #command: "tail -f /dev/null"
+    command: yarn debug
     volumes:
       - ./src:/src
   mongo:
