--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -35,6 +35,7 @@
     "@ngx-progressbar/core": "^5.3.2",
     "@swimlane/ngx-charts": "^14.0.0",
     "@types/geojson": "^7946.0.7",
+    "@types/leaflet": "^1.5.21",
     "ag-grid-angular": "^23.0.3",
     "ag-grid-community": "^23.0.2",
     "angular-oauth2-oidc": "^9.2.1",
@@ -48,6 +49,7 @@
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
     "leaflet.fullscreen": "^1.6.0",
+    "leaflet.snogylop": "^0.4.0",
     "mydatepicker": "^9.0.1",
     "ngprogress": "^1.1.3",
     "ngx-cookie-service": "^3.0.4",
