--- a/Source/Zybach.API/package.json
+++ b/Source/Zybach.API/package.json
@@ -22,12 +22,15 @@
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
     "http-errors": "~1.6.3",
+    "inversify": "^5.0.5",
+    "inversify-binding-decorators": "^4.0.0",
     "jwks-rsa": "^1.12.2",
     "moment": "^2.29.0",
     "mongoose": "^5.11.10",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.6",
     "querystring": "^0.2.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.4",
     "tsoa": "^3.4.0",
     "uuid": "^8.3.2"
