--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -51,6 +51,7 @@
     "leaflet.fullscreen": "^1.6.0",
     "leaflet.snogylop": "^0.4.0",
     "mydatepicker": "^9.0.1",
+    "ng-multiselect-dropdown": "^0.2.14",
     "ngprogress": "^1.1.3",
     "ngx-cookie-service": "^3.0.4",
     "ngx-select-dropdown": "^1.4.2",
