--- a/Source/Zybach.API/package.json
+++ b/Source/Zybach.API/package.json
@@ -49,6 +49,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.14",
     "@types/swagger-ui-express": "^4.1.2",
+    "got": "^11.8.1",
     "typescript": "^4.1.3"
   }
 }
