--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -36,6 +36,7 @@
     "@swimlane/ngx-charts": "^14.0.0",
     "@types/geojson": "^7946.0.7",
     "@types/leaflet": "^1.5.21",
+    "@types/leaflet.icon.glyph": "^0.2.0",
     "ag-grid-angular": "^23.0.3",
     "ag-grid-community": "^23.0.2",
     "angular-oauth2-oidc": "^9.2.1",
@@ -49,6 +50,7 @@
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
     "leaflet.fullscreen": "^1.6.0",
+    "leaflet.icon.glyph": "^0.3.0",
     "leaflet.snogylop": "^0.4.0",
     "mydatepicker": "^9.0.1",
     "ng-multiselect-dropdown": "^0.2.14",
@@ -67,7 +69,8 @@
     "@angular/cli": "^9.1.3",
     "@angular/compiler-cli": "^9.1.3",
     "@angular/language-service": "^9.1.3",
-    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@babel/compat-data": "~7.9.0",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
@@ -82,7 +85,6 @@
     "protractor": "~5.4.4",
     "ts-node": "~8.9.1",
     "tslint": "~6.1.2",
-    "typescript": "3.8.3",
-    "@babel/compat-data": "~7.9.0"
+    "typescript": "3.8.3"
   }
 }
