--- a/Source/Zybach.Web/angular.json
+++ b/Source/Zybach.Web/angular.json
@@ -114,7 +114,8 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "./node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "src/styles.scss" 
+              "src/styles.scss",
+              "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "assets": [
