--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -15,7 +15,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.3",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^9.2.1",
     "@angular/common": "^9.1.3",
     "@angular/compiler": "^9.1.3",
@@ -34,6 +34,8 @@
     "@nguniversal/express-engine": "^9.1.0",
     "@ngx-progressbar/core": "^5.3.2",
     "@swimlane/ngx-charts": "^14.0.0",
+    "@turf/boolean-within": "^6.3.0",
+    "@turf/helpers": "^6.3.0",
     "@types/geojson": "^7946.0.7",
     "@types/leaflet": "^1.5.21",
     "@types/leaflet.icon.glyph": "^0.2.0",
@@ -57,6 +59,7 @@
     "ngprogress": "^1.1.3",
     "ngx-cookie-service": "^3.0.4",
     "ngx-select-dropdown": "^1.4.2",
+    "ngx-toastr": "^13.2.0",
     "npm": "^6.14.4",
     "popper.js": "^1.15.0",
     "rxjs": "^6.5.5",
