--- a/Source/Zybach.API/package.json
+++ b/Source/Zybach.API/package.json
@@ -33,6 +33,7 @@
     "querystring": "^0.2.0",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.4",
+    "ts-stopwatch": "^0.0.4",
     "tsoa": "^3.4.0",
     "uuid": "^8.3.2"
   },
