ZYB-18 Add water use time series charts to well detail pages * Stub out charts * Add columns to well map grid * Fix filtering on well map * Bind map filters to grid

--- a/Source/Zybach.AghubFetch/docker-compose.debug.yml
+++ b/Source/Zybach.AghubFetch/docker-compose.debug.yml
@@ -4,8 +4,8 @@ services:
   aghub-integration:
     image: aghub-integration
     build: .
-    # environment: 
-    #   - DEBUG=true
+    environment: 
+      - DEBUG=true
     secrets:
       - Aghub_Fetch_Secret
     ports:
