--- a/Source/Zybach.Web/angular.json
+++ b/Source/Zybach.Web/angular.json
@@ -117,7 +117,11 @@
               "src/styles.scss",
               "./node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/vega/build/vega.min.js",
+              "node_modules/vega-lite/build/vega-lite.min.js",
+              "node_modules/vega-embed/build/vega-embed.min.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
