--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -66,6 +66,9 @@
     "rxjs": "^6.5.5",
     "style-loader": "^1.2.1",
     "tslib": "^1.10.0",
+    "vega": "^5.19.1",
+    "vega-embed": "^6.15.1",
+    "vega-lite": "^4.17.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
