--- a/Source/Zybach.Web/tsconfig.json
+++ b/Source/Zybach.Web/tsconfig.json
@@ -10,6 +10,8 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "importHelpers": true,
     "target": "es2015",
     "types": ["node", "jasmine"],
