--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -38,6 +38,7 @@
     "@turf/boolean-within": "^6.3.0",
     "@turf/helpers": "^6.3.0",
     "@types/geojson": "^7946.0.7",
+    "@types/json2csv": "^5.0.1",
     "@types/leaflet": "^1.5.21",
     "@types/leaflet.icon.glyph": "^0.2.0",
     "ag-grid-angular": "^23.0.3",
@@ -51,6 +52,7 @@
     "google-palette": "^1.1.0",
     "iso8601-js-period": "^0.2.1",
     "jquery": "^3.4.1",
+    "json2csv": "^5.0.6",
     "leaflet": "^1.5.1",
     "leaflet-gesture-handling": "^1.2.1",
     "leaflet.fullscreen": "^1.6.0",
