Allow filtering the chart with a date range UI element Provide a button to use the full date range

--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -43,6 +43,7 @@
     "@types/leaflet.icon.glyph": "^0.2.0",
     "ag-grid-angular": "^23.0.3",
     "ag-grid-community": "^23.0.2",
+    "angular-mydatepicker": "^0.11.0",
     "angular-oauth2-oidc": "^9.2.1",
     "angular-oauth2-oidc-jwks": "^9.0.0",
     "bootstrap": "^4.3.1",
@@ -59,7 +60,6 @@
     "leaflet.icon.glyph": "^0.3.0",
     "leaflet.snogylop": "^0.4.0",
     "moment": "^2.29.1",
-    "mydatepicker": "^9.0.1",
     "ng-multiselect-dropdown": "^0.2.14",
     "ngprogress": "^1.1.3",
     "ngx-cookie-service": "^3.0.4",
