--- a/Source/Zybach.Web/angular.json
+++ b/Source/Zybach.Web/angular.json
@@ -31,7 +31,9 @@
             "styles": [
               "src/styles.scss",
               "node_modules/leaflet.fullscreen/Control.FullScreen.css",
-              "node_modules/leaflet-gesture-handling/dist/leaflet-gesture-handling.css"
+              "node_modules/leaflet-gesture-handling/dist/leaflet-gesture-handling.css",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.slim.min.js",
