--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -67,6 +67,7 @@
     "ngx-toastr": "^13.2.0",
     "npm": "^6.14.4",
     "popper.js": "^1.15.0",
+    "primeng": "^11.3.1",
     "rxjs": "^6.5.5",
     "style-loader": "^1.2.1",
     "tslib": "^1.10.0",
