--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -46,6 +46,7 @@
     "angular-mydatepicker": "^0.11.0",
     "angular-oauth2-oidc": "^9.2.1",
     "angular-oauth2-oidc-jwks": "^9.0.0",
+    "angular-responsive-carousel": "^2.0.2",
     "bootstrap": "^4.3.1",
     "color-scheme": "^1.0.1",
     "core-js": "^3.6.5",
