--- a/Source/Zybach.API/package.json
+++ b/Source/Zybach.API/package.json
@@ -23,10 +23,12 @@
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
     "filereader": "^0.10.3",
+    "geojson": "^0.5.0",
     "http-errors": "~1.6.3",
     "inversify": "^5.0.5",
     "inversify-binding-decorators": "^4.0.0",
     "jwks-rsa": "^1.12.2",
+    "luxon": "^1.26.0",
     "moment": "^2.29.0",
     "mongoose": "^5.11.10",
     "morgan": "~1.9.1",
@@ -47,7 +49,9 @@
     "@types/express": "^4.17.9",
     "@types/express-jwt": "^6.0.0",
     "@types/express-session": "^1.17.3",
+    "@types/geojson": "^7946.0.7",
     "@types/http-errors": "^1.8.0",
+    "@types/luxon": "^1.26.5",
     "@types/mongoose": "^5.10.3",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.14",
