ZYB-93 Chemigation Sync * Configure chemigation sync typescript dev build to work with multiple files * Add GeoOptix GET calls

--- a/Source/Zybach.ChemigationSync/docker-compose.debug.yml
+++ b/Source/Zybach.ChemigationSync/docker-compose.debug.yml
@@ -6,6 +6,8 @@ services:
     build: .
     environment: 
       - DEBUG=true
+      - GEOOPTIX_BASE_URL=https://tpnrd.api-qa.geooptix.com
+      - TS_NODE_PROJECT=/src/tsconfig.json
     secrets:
       - Chemigation_Sync_Secret
     ports:
