--- a/Source/Zybach.ChemigationSync/docker-compose.yml
+++ b/Source/Zybach.ChemigationSync/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.4'
 
 services:
-  zybach-aghubfetch:
-    image: sitkacontainers.azurecr.io/zybach/aghubfetch
+  zybach-chemigation-sync:
+    image: sitkacontainers.azurecr.io/zybach/chemigation-sync
     build: .
     ports:
       - 3001:3001
