--- a/Source/Zybach.ChemigationSync/package.json
+++ b/Source/Zybach.ChemigationSync/package.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "@types/assert": "^1.5.4",
+    "@types/geojson": "^7946.0.7",
     "@types/luxon": "^1.25.1",
     "@types/mongodb": "^3.6.6",
     "ts-node": "^9.1.1",
@@ -17,7 +18,7 @@
     "@types/node": "^14.14.25",
     "applicationinsights": "^1.8.9",
     "assert": "^2.0.0",
-    "got": "^11.8.1",
+    "axios": "^0.21.1",
     "luxon": "^1.25.0",
     "mongodb": "^3.6.4"
   }
