--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Source/Zybach.NodeAPI/src/bucket/cert.pem
 Source/Zybach.NodeAPI/src/bucket/key.pem
 Source/old/Zybach.Web/wwwroot/assets/config.json
 *.pem
+/Source/Zybach.API/appsecrets.json
