--- a/Source/Zybach.API/Zybach.API.csproj
+++ b/Source/Zybach.API/Zybach.API.csproj
@@ -9,6 +9,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="GeoJSON.Net" Version="1.2.19" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="InfluxDB.Client" Version="2.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.17.0" />
