Basic CRUD in place on API side, added active and inactive entries to ChemigationPermitStatus table as starters.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Source/Zybach.NodeAPI/src/bucket/key.pem
 Source/old/Zybach.Web/wwwroot/assets/config.json
 *.pem
 /Source/Zybach.API/appsecrets.json
+Source/Zybach.Web/.vscode/
