--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -15,24 +15,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.13",
-    "@angular/common": "^9.1.3",
-    "@angular/compiler": "^9.1.3",
-    "@angular/core": "^9.1.3",
+    "@angular/animations": "^10.2.5",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
     "@angular/elements": "^11.2.3",
-    "@angular/forms": "^9.1.3",
-    "@angular/localize": "^9.1.3",
-    "@angular/platform-browser": "^9.1.3",
-    "@angular/platform-browser-dynamic": "^9.1.3",
-    "@angular/platform-server": "^9.1.3",
-    "@angular/router": "^9.1.3",
+    "@angular/forms": "^10.2.5",
+    "@angular/localize": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/platform-server": "^10.2.5",
+    "@angular/router": "^10.2.5",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@ckeditor/ckeditor5-upload": "^18.0.0",
     "@microsoft/applicationinsights-web": "^2.5.10",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngx-progressbar/core": "^5.3.2",
-    "@swimlane/ngx-charts": "^14.0.0",
     "@turf/boolean-within": "^6.3.0",
     "@turf/helpers": "^6.3.0",
     "@types/geojson": "^7946.0.7",
@@ -76,10 +75,10 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.3",
-    "@angular/cli": "^9.1.3",
-    "@angular/compiler-cli": "^9.1.3",
-    "@angular/language-service": "^9.1.3",
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular/cli": "^10.2.3",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
     "@babel/compat-data": "~7.9.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@types/jasmine": "^3.3.16",
@@ -95,7 +94,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.4",
     "ts-node": "~8.9.1",
-    "tslint": "~6.1.2",
-    "typescript": "3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "4.0.8"
   }
 }
