--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.5",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "^10.2.5",
-    "@angular/compiler": "^10.2.5",
-    "@angular/core": "^10.2.5",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
     "@angular/elements": "^11.2.3",
-    "@angular/forms": "^10.2.5",
-    "@angular/localize": "^10.2.5",
-    "@angular/platform-browser": "^10.2.5",
-    "@angular/platform-browser-dynamic": "^10.2.5",
-    "@angular/platform-server": "^10.2.5",
-    "@angular/router": "^10.2.5",
+    "@angular/forms": "^11.2.14",
+    "@angular/localize": "^11.2.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/platform-server": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@ckeditor/ckeditor5-upload": "^18.0.0",
@@ -68,31 +68,31 @@
     "primeng": "^11.3.1",
     "rxjs": "^6.5.5",
     "style-loader": "^1.2.1",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "vega": "^5.19.1",
     "vega-embed": "^6.15.1",
     "vega-lite": "^4.17.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.3",
-    "@angular/cli": "^10.2.3",
-    "@angular/compiler-cli": "^10.2.5",
-    "@angular/language-service": "^10.2.5",
+    "@angular-devkit/build-angular": "~0.1102.15",
+    "@angular/cli": "^11.2.15",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/language-service": "^11.2.14",
     "@babel/compat-data": "~7.9.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
-    "@types/jasmine": "^3.3.16",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.2",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "^5.0.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "~3.1.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.4",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.9.1",
     "tslint": "~6.1.0",
     "typescript": "4.0.8"
