--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --disableHostCheck true --port 8713",
-    "start-ssl": "ng serve --host 0.0.0.0 --disableHostCheck true --port 8714 --ssl --ssl-cert dev_cert.pfx --ssl-key password#1",
+    "start": "ng serve --host 0.0.0.0 --disable-host-check true --port 8713",
+    "start-ssl": "ng serve --host 0.0.0.0 --disable-host-check true --port 8714 --ssl --ssl-cert dev_cert.pfx --ssl-key password#1",
     "build": "ng build",
     "build-dev": "ng build",
     "build-qa": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng build --configuration=qa --configuration production",
@@ -16,7 +16,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.13",
-    "@angular/cdk": "^11.2.13",
+    "@angular/cdk": "^12.2.12",
     "@angular/common": "^12.2.13",
     "@angular/compiler": "^12.2.13",
     "@angular/core": "^12.2.13",
@@ -31,20 +31,20 @@
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@ckeditor/ckeditor5-upload": "^18.0.0",
     "@microsoft/applicationinsights-web": "^2.5.10",
-    "@ngx-progressbar/core": "^5.3.2",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@swimlane/ngx-charts": "^19.1.0",
     "@turf/boolean-within": "^6.3.0",
     "@turf/helpers": "^6.3.0",
     "@types/geojson": "^7946.0.7",
     "@types/json2csv": "^5.0.1",
     "@types/leaflet": "^1.5.21",
     "@types/leaflet.icon.glyph": "^0.2.0",
-    "ag-grid-angular": "^23.0.3",
-    "ag-grid-community": "^23.0.2",
-    "angular-mydatepicker": "^0.11.0",
-    "angular-oauth2-oidc": "^9.2.1",
-    "angular-oauth2-oidc-jwks": "^9.0.0",
-    "angular-responsive-carousel": "^2.0.2",
-    "bootstrap": "^4.3.1",
+    "ag-grid-angular": "^26.1.0",
+    "ag-grid-community": "^26.1.0",
+    "angular-mydatepicker": "^0.11.5",
+    "angular-oauth2-oidc": "^12.1.0",
+    "angular-oauth2-oidc-jwks": "^12.0.0",
+    "bootstrap": "^4.4.1",
     "color-scheme": "^1.0.1",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
@@ -52,49 +52,52 @@
     "iso8601-js-period": "^0.2.1",
     "jquery": "^3.4.1",
     "json2csv": "^5.0.6",
-    "leaflet": "^1.5.1",
+    "leaflet": "^1.7.1",
     "leaflet-gesture-handling": "^1.2.1",
-    "leaflet.fullscreen": "^1.6.0",
+    "leaflet.fullscreen": "^2.1.0",
     "leaflet.icon.glyph": "^0.3.0",
     "leaflet.snogylop": "^0.4.0",
     "moment": "^2.29.1",
     "ng-multiselect-dropdown": "^0.2.14",
-    "ngprogress": "^1.1.3",
-    "ngx-cookie-service": "^3.0.4",
-    "ngx-select-dropdown": "^1.4.2",
+    "ngx-cookie-service": "^12.0.3",
+    "ngx-pagination": "^5.1.1",
+    "ngx-progressbar": "^6.1.1",
+    "ngx-select-dropdown": "^2.1.0",
     "ngx-toastr": "^13.2.0",
-    "npm": "^6.14.4",
-    "popper.js": "^1.15.0",
-    "primeng": "^11.3.1",
+    "popper.js": "^1.16.1-lts",
+    "primeng": "^12.2.2",
     "rxjs": "^6.5.5",
+    "set-value": ">=4.0.1",
     "style-loader": "^1.2.1",
-    "tslib": "^2.0.0",
-    "vega": "^5.19.1",
-    "vega-embed": "^6.15.1",
-    "vega-lite": "^4.17.0",
+    "tslib": "^2.3.1",
+    "vega": "^5.21.0",
+    "vega-embed": "^6.20.0",
+    "vega-lite": "^5.1.1",
+    "webpack": "^5.30.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.13",
+    "@angular-eslint/eslint-plugin": "^12.6.1",
     "@angular/cli": "^12.2.13",
     "@angular/compiler-cli": "^12.2.13",
     "@angular/language-service": "^12.2.13",
     "@babel/compat-data": "~7.9.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
+    "@types/node": "^13.13.50",
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.3.8",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsdoc": "^37.0.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "install": "^0.13.0",
+    "npm": "^8.1.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.9.1",
-    "tslint": "~6.1.0",
     "typescript": "4.3.5"
   }
 }
