updating to target .net 5.0 and angular 12

--- a/Source/Zybach.Web/docker-compose/docker-compose.yml
+++ b/Source/Zybach.Web/docker-compose/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.5'
+version: '3.7'
 
 services:
   zybach.web:
-    image: sitkacontainers.azurecr.io/zybach/web
+    image: zybach/web
     build:
       args:
         env: ${ENVIRONMENT}
