removed sitkacontainers tag since it will be tagged by the build

--- a/Source/docker-compose/docker-compose.vs.debug.yml
+++ b/Source/docker-compose/docker-compose.vs.debug.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   zybach.api:
-    image: sitkacontainers.azurecr.io/zybach/api
+    image: zybach/api
     labels:
       - "com.microsoft.visualstudio.targetoperatingsystem=linux"
     build:
